# Mistral-TTS-iOS

./: .gitignore  CLAUDE.md  README.md  VOXTRAL_IOS_PLAN.md  pyproject.toml  test_reference_speech.aiff  validate_model_dir.py
.claude/: settings.local.json
VoxtralTTS/: Package.resolved  Package.swift
VoxtralTTS-App/: project.yml
VoxtralTTS-App/VoxtralTTS/: Info.plist
VoxtralTTS-App/VoxtralTTS.xcodeproj/: project.pbxproj
VoxtralTTS-App/VoxtralTTS.xcodeproj/xcshareddata/xcschemes/: VoxtralTTSTests_macOS.xcscheme
VoxtralTTS-App/VoxtralTTS/Sources/Audio/: AudioPlayer.swift  AudioPreprocessor.swift  AudioRecorder.swift
VoxtralTTS-App/VoxtralTTS/Sources/Model/: AcousticTransformer.swift  ModelConfig.swift  TransformerDecoder.swift  VoxtralCodec.swift  VoxtralModel.swift
VoxtralTTS-App/VoxtralTTS/Sources/Tokenizer/: VoxtralTokenizer.swift
VoxtralTTS-App/VoxtralTTS/Sources/Views/: ActivityView.swift  ContentView.swift  TTSViewModel.swift
VoxtralTTS-App/VoxtralTTSTests/: AudioPlayerTests.swift  GenerationTests.swift  ModelLoadingTests.swift  TestHelpers.swift  TokenizerTests.swift
VoxtralTTS/Sources/VoxtralTTS/: TestLoadQ2.swift  VoxtralTTSApp.swift
VoxtralTTS/Sources/VoxtralTTS/Audio/: AudioPlayer.swift  MistralAPIClient.swift  VoiceEmbeddingStore.swift
VoxtralTTS/Sources/VoxtralTTS/Model/: AcousticTransformer.swift  (+4 more)
scripts/: build_models.sh
voxtral_tts/: __init__.py  acoustic_transformer.py  codec.py  config.py  convert.py  convert_voices.py  generate_test.py  test_model.py  test_transcription.py  transformer_decoder.py  voxtral_tts.py
(+7 files in other folders)
