[project]
name = "voxtral-tts-mlx"
version = "0.1.0"
description = "Voxtral TTS (4B) ported to Apple MLX for on-device inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.20.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "transformers>=4.40.0",
    "mistral-common[audio]>=1.5.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "torch>=2.0",  # For weight conversion from .pt files
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
